# Laba_c-

./: CMakeLists.txt  func.cpp  func.hpp  laba1.1.1.cpp  time.txt
